--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "shrubbery"
 version = "0.1.0"
-authors = ["Jeremy Feltracco <jeremy@feltrac.co>"]
+authors = []
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
+amethyst = "0.15.0"
+
+[features]
+default = ["metal"]
+empty = ["amethyst/empty"]
+metal = ["amethyst/metal"]
+vulkan = ["amethyst/vulkan"]
